[package]
name    = "filter_plotter"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
egui = { workspace = true }
egui_dock = { workspace = true }
egui_plot = { workspace = true }
egui_citizen = { workspace = true }
egui_lens = { workspace = true }
egui_mobius_reactive = { workspace = true }
eframe = { workspace = true, features = ["default"] }

# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }

# Web dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = { workspace = true }
