[package]
name              = "grafica_quad_cluster"
version           = "0.1.0"
edition.workspace = true
publish           = false

[dependencies]
eframe       = { workspace = true, features = ["default"] }
egui         = { workspace = true }
egui_grafica = { workspace = true, features = ["gpu"] }
