[package]
name = "logger_component"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui_lens = { workspace = true }
egui_mobius_reactive = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true, features = ["default", "glow"] }
chrono = { workspace = true }
sysinfo = "0.34"
local-ip-address = "0.6"
