[package]
name = "masonry-reactive"
version = "0.1.0"
edition = "2021"

[dependencies]
egui_mobius_reactive = {version = "0.3.0-alpha.27"}
egui_mobius_widgets = {version = "0.3.0-alpha.27"}
egui_mobius = {version = "0.3.0-alpha.27"}
#xilem   = { git = "https://github.com/linebender/xilem.git", branch = "main" }
masonry = { git = "https://github.com/linebender/xilem.git", branch = "main" }
winit = "0.30.5"
parley = "0.3.0"