[package]
name = "realtime_plot"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui_plot = { version = "0.31.0" }

egui_mobius = { path = "../../crates/egui_mobius" }
egui_mobius_widgets = { path = "../../crates/egui_mobius_widgets" }
egui = { workspace = true }
eframe = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
