[package]
name = "realtime_plot"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
egui_plot = { workspace = true }
egui_mobius = { path = "../../crates/egui_mobius" }
eframe = { workspace = true, features = ["default", "glow", "default_fonts"] }
image = { version = "0.24.7", features = ["png"] }
